--- a/src/bzip2/bzip2.vcproj
+++ b/src/bzip2/bzip2.vcproj
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="9.00"
 	Name="bzip2"
 	ProjectGUID="{2A70CBF0-847E-4E3A-B926-542A656DC7FE}"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
