--- a/src/wowmodelview.vcproj
+++ b/src/wowmodelview.vcproj
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="9.00"
 	Name="wowmodelview"
 	ProjectGUID="{DCA0C667-2A7A-4FCE-AD02-466F7A380E0C}"
 	RootNamespace="wowmodelview"
 	Keyword="Win32Proj"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
@@ -42,7 +43,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalOptions="/D &quot;WotLK&quot;&#x0D;&#x0A;"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;C:\wxWidgets-2.8.9\include&quot;;&quot;C:\wxWidgets-2.8.9\include\msvc&quot;;.\zlib\;.\glew\include;.\bzip2\;.\;"
+				AdditionalIncludeDirectories="&quot;.\wx\include&quot;;&quot;.\wx\include\msvc&quot;;.\zlib\;.\glew\include;.\bzip2\;.\;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;__WINDOWS__;__WXMSW__;__WXDEBUG__"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -65,17 +66,16 @@
 			/>
 			<Tool
 				Name="VCResourceCompilerTool"
-				AdditionalIncludeDirectories="C:\wxWidgets-2.8.9\include"
+				AdditionalIncludeDirectories=".\wx\include"
 			/>
 			<Tool
 				Name="VCPreLinkEventTool"
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="glew32d.lib"
 				OutputFile="$(OutDir)/wowmodelview.exe"
 				LinkIncremental="0"
-				AdditionalLibraryDirectories="&quot;C:\wxWidgets-2.8.9\lib&quot;;&quot;C:\wxWidgets-2.8.9\lib\vc_lib&quot;;.\CxImage\;.\glew\lib;.\zlib\$(OutDir);.\bzip2\$(OutDir)"
+				AdditionalLibraryDirectories=".\wx\lib\vc_lib;.\CxImage;.\glew\lib;.\zlib\$(OutDir);.\bzip2\$(OutDir)"
 				IgnoreAllDefaultLibraries="false"
 				IgnoreDefaultLibraryNames="LIBCMT.lib"
 				GenerateDebugInformation="true"
@@ -84,6 +84,8 @@
 				MapExports="true"
 				SubSystem="2"
 				LargeAddressAware="2"
+				RandomizedBaseAddress="1"
+				DataExecutionPrevention="0"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -103,9 +105,6 @@
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
-			/>
-			<Tool
-				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
@@ -145,7 +144,7 @@
 				InlineFunctionExpansion="2"
 				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="1"
-				AdditionalIncludeDirectories="&quot;C:\wxWidgets-2.8.9\include&quot;;&quot;C:\wxWidgets-2.8.9\include\msvc&quot;;.\zlib\;.\glew\include;.\bzip2\;.\;"
+				AdditionalIncludeDirectories="&quot;.\wx\include&quot;;&quot;.\wx\include\msvc&quot;;.\zlib\;.\glew\include;.\bzip2\;.\;"
 				PreprocessorDefinitions="WIN32;_WINDOWS;_WIN32"
 				GeneratePreprocessedFile="0"
 				KeepComments="false"
@@ -167,7 +166,7 @@
 			/>
 			<Tool
 				Name="VCResourceCompilerTool"
-				AdditionalIncludeDirectories="C:\wxWidgets-2.8.9\include\"
+				AdditionalIncludeDirectories=".\wx\include"
 			/>
 			<Tool
 				Name="VCPreLinkEventTool"
@@ -179,7 +178,7 @@
 				Version="0.5.01"
 				LinkIncremental="0"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="&quot;C:\wxWidgets-2.8.9\lib&quot;;&quot;C:\wxWidgets-2.8.9\lib\vc_lib&quot;;.\CxImage\;.\glew\lib;.\zlib\$(OutDir);.\bzip2\$(OutDir)"
+				AdditionalLibraryDirectories=".\wx\lib\vc_lib;.\CxImage;.\glew\lib;.\zlib\$(OutDir);.\bzip2\$(OutDir)"
 				IgnoreDefaultLibraryNames="LIBCMT.lib"
 				GenerateDebugInformation="false"
 				AssemblyDebug="2"
@@ -192,6 +191,8 @@
 				EnableCOMDATFolding="2"
 				OptimizeForWindows98="1"
 				SetChecksum="true"
+				RandomizedBaseAddress="1"
+				DataExecutionPrevention="0"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -211,103 +212,10 @@
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
-			/>
-			<Tool
-				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
 				CommandLine="copy CxImage\cximagecrt.dll $(OutDir)\&#x0D;&#x0A;copy glew\bin\glew32.dll $(OutDir)\&#x0D;&#x0A;mkdir $(OutDir)\enUS&#x0D;&#x0A;copy ..\bin\enUS\* $(OutDir)\enUS\&#x0D;&#x0A;copy ..\bin\*.csv $(OutDir)\&#x0D;&#x0A;"
-			/>
-		</Configuration>
-		<Configuration
-			Name="UnicodeDebug|Win32"
-			OutputDirectory="$(ConfigurationName)"
-			IntermediateDirectory="$(ConfigurationName)"
-			ConfigurationType="1"
-			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
-			CharacterSet="1"
-			>
-			<Tool
-				Name="VCPreBuildEventTool"
-			/>
-			<Tool
-				Name="VCCustomBuildTool"
-			/>
-			<Tool
-				Name="VCXMLDataGeneratorTool"
-			/>
-			<Tool
-				Name="VCWebServiceProxyGeneratorTool"
-			/>
-			<Tool
-				Name="VCMIDLTool"
-			/>
-			<Tool
-				Name="VCCLCompilerTool"
-				Optimization="0"
-				AdditionalIncludeDirectories="&quot;.\wxWidgets-2.8.9\include&quot;;&quot;.\wxWidgets-2.8.9\include\msvc&quot;;&quot;.\wxAUI-0.9.2\include&quot;;./;zlib/;.\glew\include"
-				PreprocessorDefinitions="WIN32;_DEBUG;_UNICODE;_WINDOWS;__WINDOWS__;__WXMSW__;__WXDEBUG__;WXDEBUG=1"
-				MinimalRebuild="true"
-				BasicRuntimeChecks="3"
-				SmallerTypeCheck="true"
-				RuntimeLibrary="3"
-				BufferSecurityCheck="true"
-				EnableFunctionLevelLinking="true"
-				TreatWChar_tAsBuiltInType="true"
-				ForceConformanceInForLoopScope="true"
-				RuntimeTypeInfo="true"
-				UsePrecompiledHeader="0"
-				WarningLevel="3"
-				Detect64BitPortabilityProblems="true"
-				DebugInformationFormat="3"
-			/>
-			<Tool
-				Name="VCManagedResourceCompilerTool"
-			/>
-			<Tool
-				Name="VCResourceCompilerTool"
-				AdditionalIncludeDirectories=".\wxWidgets-2.6.3\include"
-			/>
-			<Tool
-				Name="VCPreLinkEventTool"
-			/>
-			<Tool
-				Name="VCLinkerTool"
-				AdditionalDependencies="glew32.lib comctl32.lib rpcrt4.lib"
-				OutputFile="$(OutDir)/wowmodelview.exe"
-				LinkIncremental="1"
-				AdditionalLibraryDirectories="&quot;.\wxWidgets-2.8.9\lib&quot;;&quot;.\wxWidgets-2.8.9\lib\vc_lib&quot;;&quot;.\wxaui-0.9.2\lib&quot;;.\CxImage\;.\glew\lib"
-				IgnoreDefaultLibraryNames=""
-				GenerateDebugInformation="true"
-				ProgramDatabaseFile="$(OutDir)/wowmodelview.pdb"
-				GenerateMapFile="true"
-				SubSystem="2"
-				TargetMachine="1"
-			/>
-			<Tool
-				Name="VCALinkTool"
-			/>
-			<Tool
-				Name="VCManifestTool"
-			/>
-			<Tool
-				Name="VCXDCMakeTool"
-			/>
-			<Tool
-				Name="VCBscMakeTool"
-			/>
-			<Tool
-				Name="VCFxCopTool"
-			/>
-			<Tool
-				Name="VCAppVerifierTool"
-			/>
-			<Tool
-				Name="VCWebDeploymentTool"
-			/>
-			<Tool
-				Name="VCPostBuildEventTool"
 			/>
 		</Configuration>
 	</Configurations>
@@ -432,14 +340,6 @@
 				>
 				<FileConfiguration
 					Name="Debug|Win32"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						WarningLevel="4"
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="UnicodeDebug|Win32"
 					>
 					<Tool
 						Name="VCCLCompilerTool"
@@ -646,10 +546,6 @@
 					/>
 				</FileConfiguration>
 			</File>
-			<File
-				RelativePath=".\wowmodelview.rc"
-				>
-			</File>
 		</Filter>
 		<Filter
 			Name="CxImage"
@@ -759,6 +655,10 @@
 				>
 			</File>
 		</Filter>
+		<File
+			RelativePath="..\doc\changelog.txt"
+			>
+		</File>
 		<File
 			RelativePath=".\Makefile"
 			>
