--- a/trunk/src/libmpq/libmpq.vcproj
+++ b/trunk/src/libmpq/libmpq.vcproj
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="big5"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="9.00"
 	Name="libmpq"
 	ProjectGUID="{EE3A42DD-81C7-48DE-A0E2-393F0B7F6558}"
 	RootNamespace="libmpq"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
