--- a/trunk/src/zlib/zlib.vcproj
+++ b/trunk/src/zlib/zlib.vcproj
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="big5"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="9.00"
 	Name="zlib"
 	ProjectGUID="{D3F9754D-071C-4E58-847B-DDE9D564EF72}"
 	Keyword="MFCProj"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
