--- a/src/wowmodelview.vcproj
+++ b/src/wowmodelview.vcproj
@@ -561,7 +561,7 @@
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
 			<File
-				RelativePath=".\mondrian.ico"
+				RelativePath=".\mondrian-new.ico"
 				>
 				<FileConfiguration
 					Name="Release|Win32"
