- Fixed wide-char issues - Added new icon to CMake file - Added definitions for OSX to CMake file (only Intel for now)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -30,13 +30,16 @@ add_library(mpq STATIC ${MPQ_SOURCES})
 add_library(cximage STATIC ${CXIMAGE_SOURCES})
 
 if (APPLE)
+	add_definitions(-D_MAC)
+	add_definitions(-D_MAC_INTEL)
+
 	set(CMAKE_OSX_ARCHITECTURES i386)
-	set(MACOSX_BUNDLE_ICON_FILE mondrian-new.icns)
+	set(MACOSX_BUNDLE_ICON_FILE wmv.icns)
 	set(MACOSX_BUNDLE_INFO_STRING "World of Warcraft ModelViewer")
 	
 	set_source_files_properties("${MACOSX_BUNDLE_ICON_FILE}" PROPERTIES MACOSX_PACKAGE_LOCATION Resources)
 	
-	add_executable(wowmodelviewer MACOSX_BUNDLE ${WOWMV_SOURCES} ${MACOSX_BUNDLE_ICON_FILE})
+	add_executable(wowmodelviewer MACOSX_BUNDLE ${WOWMV_SOURCES} ../bin_support/Icons/${MACOSX_BUNDLE_ICON_FILE})
 else()
 	add_executable(wowmodelviewer ${WOWMV_SOURCES})
 endif()
